// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snippets routes GET /:id can get a snippet by external ID 1`] = `
{
  "app": {
    "id": "zNrpboD",
    "name": "Discord",
  },
  "appSpecificDataJson": "{"key":"value"}",
  "creatorId": "E21K9jm",
  "id": "BQAYLpr",
  "messages": [
    {
      "appSpecificDataJson": "{"key2":"value2"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content",
      "id": "1GX8zMN",
      "sentAt": "1970-01-01T00:00:00.010Z",
    },
  ],
  "public": true,
  "title": "Test snippet title",
  "views": 0,
}
`;

exports[`snippets routes POST / can create a snippet with auth 1`] = `
{
  "app": {
    "id": "zNrpboD",
    "name": "Discord",
  },
  "appSpecificDataJson": "{"key":"value"}",
  "creatorId": "E21K9jm",
  "id": "BQAYLpr",
  "messages": [
    {
      "appSpecificDataJson": "{"key":"value 0"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 0",
      "id": "1GX8zMN",
      "sentAt": "1970-01-01T00:00:00.000Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 1"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 1",
      "id": "WKM1Nr1",
      "sentAt": "1970-01-01T00:00:00.005Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 2"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 2",
      "id": "E7rEDMv",
      "sentAt": "1970-01-01T00:00:00.010Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 3"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 3",
      "id": "pwrLpr8",
      "sentAt": "1970-01-01T00:00:00.015Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 4"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 4",
      "id": "R2MVGrV",
      "sentAt": "1970-01-01T00:00:00.020Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 5"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 5",
      "id": "GE4lBrZ",
      "sentAt": "1970-01-01T00:00:00.025Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 6"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 6",
      "id": "NZXvDMo",
      "sentAt": "1970-01-01T00:00:00.030Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 7"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 7",
      "id": "wq4Bz42",
      "sentAt": "1970-01-01T00:00:00.035Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 8"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 8",
      "id": "oPrOQ46",
      "sentAt": "1970-01-01T00:00:00.040Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 9"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 9",
      "id": "nBXweM2",
      "sentAt": "1970-01-01T00:00:00.045Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 10"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 10",
      "id": "gKMxBX8",
      "sentAt": "1970-01-01T00:00:00.050Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 11"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 11",
      "id": "EQXQqX7",
      "sentAt": "1970-01-01T00:00:00.055Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 12"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 12",
      "id": "K2rka49",
      "sentAt": "1970-01-01T00:00:00.060Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 13"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 13",
      "id": "a1X7l43",
      "sentAt": "1970-01-01T00:00:00.065Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 14"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 14",
      "id": "gJXn0Me",
      "sentAt": "1970-01-01T00:00:00.070Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 15"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 15",
      "id": "6746Z4j",
      "sentAt": "1970-01-01T00:00:00.075Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 16"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 16",
      "id": "p845A4a",
      "sentAt": "1970-01-01T00:00:00.080Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 17"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 17",
      "id": "Y0rJbrp",
      "sentAt": "1970-01-01T00:00:00.085Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 18"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 18",
      "id": "nxMD6Xy",
      "sentAt": "1970-01-01T00:00:00.090Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 19"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 19",
      "id": "LR4bLrz",
      "sentAt": "1970-01-01T00:00:00.095Z",
    },
  ],
  "public": true,
  "title": "Test snippet title",
  "views": 0,
}
`;

exports[`snippets routes POST / can create a snippet with empty content message 1`] = `
{
  "app": {
    "id": "zNrpboD",
    "name": "Discord",
  },
  "appSpecificDataJson": "{"key":"value"}",
  "creatorId": "E21K9jm",
  "id": "BQAYLpr",
  "messages": [
    {
      "appSpecificDataJson": "{"key":"value"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "",
      "id": "1GX8zMN",
      "sentAt": "1970-01-01T00:00:00.005Z",
    },
  ],
  "public": true,
  "title": "Test snippet title",
  "views": 0,
}
`;

exports[`snippets routes POST / can create a snippet with no auth 1`] = `
{
  "app": {
    "id": "zNrpboD",
    "name": "Discord",
  },
  "appSpecificDataJson": "{"key":"value"}",
  "creatorId": null,
  "id": "BQAYLpr",
  "messages": [
    {
      "appSpecificDataJson": "{"key":"value 0"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 0",
      "id": "1GX8zMN",
      "sentAt": "1970-01-01T00:00:00.000Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 1"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 1",
      "id": "WKM1Nr1",
      "sentAt": "1970-01-01T00:00:00.005Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 2"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 2",
      "id": "E7rEDMv",
      "sentAt": "1970-01-01T00:00:00.010Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 3"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 3",
      "id": "pwrLpr8",
      "sentAt": "1970-01-01T00:00:00.015Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 4"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 4",
      "id": "R2MVGrV",
      "sentAt": "1970-01-01T00:00:00.020Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 5"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 5",
      "id": "GE4lBrZ",
      "sentAt": "1970-01-01T00:00:00.025Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 6"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 6",
      "id": "NZXvDMo",
      "sentAt": "1970-01-01T00:00:00.030Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 7"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 7",
      "id": "wq4Bz42",
      "sentAt": "1970-01-01T00:00:00.035Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 8"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 8",
      "id": "oPrOQ46",
      "sentAt": "1970-01-01T00:00:00.040Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 9"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 9",
      "id": "nBXweM2",
      "sentAt": "1970-01-01T00:00:00.045Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 10"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 10",
      "id": "gKMxBX8",
      "sentAt": "1970-01-01T00:00:00.050Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 11"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 11",
      "id": "EQXQqX7",
      "sentAt": "1970-01-01T00:00:00.055Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 12"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 12",
      "id": "K2rka49",
      "sentAt": "1970-01-01T00:00:00.060Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 13"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 13",
      "id": "a1X7l43",
      "sentAt": "1970-01-01T00:00:00.065Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 14"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 14",
      "id": "gJXn0Me",
      "sentAt": "1970-01-01T00:00:00.070Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 15"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 15",
      "id": "6746Z4j",
      "sentAt": "1970-01-01T00:00:00.075Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 16"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 16",
      "id": "p845A4a",
      "sentAt": "1970-01-01T00:00:00.080Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 17"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 17",
      "id": "Y0rJbrp",
      "sentAt": "1970-01-01T00:00:00.085Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 18"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 18",
      "id": "nxMD6Xy",
      "sentAt": "1970-01-01T00:00:00.090Z",
    },
    {
      "appSpecificDataJson": "{"key":"value 19"}",
      "authorAvatarUrl": "http://example.com/123.png",
      "authorIdentifier": "1234",
      "authorUsername": "Icyspawn",
      "content": "Content 19",
      "id": "LR4bLrz",
      "sentAt": "1970-01-01T00:00:00.095Z",
    },
  ],
  "public": true,
  "title": "Test snippet title",
  "views": 0,
}
`;

exports[`snippets routes POST / can create a snippet with no auth 2`] = `
{
  "appId": 1,
  "appSpecificDataJson": "{"key":"value"}",
  "creatorId": null,
  "id": 1,
  "public": true,
  "title": "Test snippet title",
  "views": 0,
}
`;
